--- a/INDICE.HTML
+++ b/INDICE.HTML
@@ -1,4 +1,4 @@
-<HTML>
+<html>
 <HEAD>
 <TITLE>
 </TITLE>
@@ -40,4 +40,4 @@
 </UL>
 <HR WIDTH=90% SIZE=10 COLOR=DEEPPINK></hr>
 </BODY>
-</HTML>
+</html>
