--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<HTML>
+<html>
 <TITLE>Nombre Proyecto-Tema</TITLE>
 <FRAMESET ROWS="11%,85%">
     <FRAME SRC="Encabezado.html">
@@ -7,4 +7,4 @@
 <FRAME  SRC="indice.html" NAME="Indice">                
 <FRAME SRC="Portada.html" name="Marco_Principal">
 </FRAMESET>
-</HTML>
+</html>
